k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: llm-prompt-purify
  labels:
    app.kubernetes.io/part-of: llm-prompt-purify
